--- a/public/angular.html
+++ b/public/angular.html
@@ -5,17 +5,40 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script> -->
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket.js"></script>
+    <!-- <script src="https://cdn.rawgit.com/gdi2290/angular-websocket/v1.0.9/angular-websocket.min.js"></script> -->
     <script src="app.js"></script>
   </head>
-  <body ng-controller="ChannelController as channel">
-    <h1><a data-ui-sref="messageIndex">Float Messenger</a></h1>
-    <main data-ui-view>
 
-      <div ng-repeat="message in channel.messages">
-        <p chat-message></p>
+  <body>
+
+    <header>
+      <h1>Float Messenger</h1>
+    </header>
+
+    <main ng-controller="ChannelController as channel">
+
+      <div id="#message-box">
+        <p chat-message ng-repeat="message in channel.messages"></p>
+      </div>
+
+      <div ng-controller="MessengerController as messenger">
+        <form id="messenger-form" novalidate>
+          <label for="message_body"></label>
+          <input type="text" name="message_body" ng-model="messenger.message.body" autocomplete="off"></input>
+          <button ng-click="messenger.send(message)" id="#message-submit">send</button>
+        </form>
+      </div>
+
+      <!-- <div ng-controller="SomeController as whatev">
+        {{1+ 1}}
+      </div> -->
     </main>
+
   </body>
+
 </html>
