--- a/public/index.html
+++ b/public/index.html
@@ -2,51 +2,60 @@
 <html data-ng-app="float">
   <head>
     <title>Float Messenger</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="socket.js"></script>
-    <!-- <script src="https://cdn.rawgit.com/gdi2290/angular-websocket/v1.0.9/angular-websocket.min.js"></script> -->
     <script src="app.js"></script>
   </head>
 
   <body>
 
-    <header>
+    <header class="jumbotron">
       <h1>Float Messenger</h1>
+      <div data-ng-controller="MyController as my" data-ng-hide="my.username == '???'">
+        <h2>Hi, {{my.username}}! <span>(That's your name here.)</span></h2>
+      </div>
     </header>
 
-    <main ng-controller="ChannelController as channel">
+    <main data-ng-controller="ChannelController as channel" class="container">
 
-      <div ng-controller="MyController as my" ng-hide="my.username == '???'">
-        <h2>Hi {{my.username}}! (That's your name here.)</h2>
-      </div>
+      <div class="row">
 
-      <div id="#message-box">
-        <p chat-message ng-repeat="message in channel.messages"></p>
-      </div>
+        <div class="col-md-8 col-sm-10">
 
-      <div ng-controller="MessengerController as messenger">
-        <p class="currently-typing">{{messenger.othersTypingStatus}}</p>
-        <div>
-          <form id="messenger-form" novalidate>
-            <label for="message_body" title="That's you!"><strong>{{messenger.username}}</strong> (that's you!)</label>
-            <input type="text" name="message_body" ng-model="messenger.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" ng-change="messenger.typing()"></input>
-            <button ng-click="messenger.send(message)" id="#message-submit">send</button>
-          </form>
+          <ul id="#message-box" class="list-group-item">
+            <li data-chat-message data-ng-repeat="message in channel.messages" class="list-group-item"></li>
+          </ul>
+
+          <div data-ng-controller="MessengerController as messenger" id="messenger">
+            <p id="currently-typing">{{messenger.othersTypingStatus}}</p>
+            <div>
+              <form id="messenger-form" novalidate>
+                <label for="message_body" title="That's you!"><strong>{{messenger.username}}</strong> (that's you!)</label>
+                <input type="text" name="message_body" id="message_body" data-ng-model="messenger.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" data-ng-change="messenger.typing()">
+                <button data-ng-click="messenger.send(message)" id="#message-submit">send</button>
+              </form>
+            </div>
+          </div>
+
         </div>
-      </div>
 
-      <aside ng-controller="UserIndexController as list">
-        <h2>current users</h2>
-        <ul>
-          <li username ng-repeat="username in list.usernames"></li>
-        </ul>
-      </aside>
+        <aside data-ng-controller="UserIndexController as list" id="user-index" class="col-md-4 col-sm-2 well well-sm">
+          <h2>Current Users</h2>
+          <ul>
+            <li data-username data-ng-repeat="username in list.usernames"></li>
+          </ul>
+        </aside>
+
+      </div>
 
     </main>
 
