--- a/public/message.html
+++ b/public/message.html
@@ -1,4 +1,4 @@
-<strong>{{message.username}}</strong>: {{message.body}}
+<strong class="username">{{message.username}}</strong>: {{message.body}}
 
 <!--
 example:
