Remove hrefs for nonlinks in Bootstrap nav

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
           </div>
           <ul class="nav navbar-nav">
             <li class="active" data-ng-controller="MyController as my" data-ng-hide="my.username == '???'"><a href="#currently-typing">Hi, {{my.username}}! <span>(That's your name here.)</span></a></li>
-            <li><a href="#">Angular</a></li>
-            <li><a href="#">Socket.IO</a></li>
-            <li><a href="#">Express</a></li>
-            <li><a href="#">Node.js</a></li>
-            <li><a href="#">MongoDB</a></li>
+            <li><a>Angular</a></li>
+            <li><a>Socket.IO</a></li>
+            <li><a>Express</a></li>
+            <li><a>Node.js</a></li>
+            <li><a>MongoDB</a></li>
           </ul>
         </div>
       </nav>
