--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="socket.js"></script>
-    <script src="scrolline.js"></script>
+    <!-- <script src="scrolline.js"></script> -->
     <script src="app.js"></script>
   </head>
 
@@ -31,11 +31,6 @@
           </div>
           <ul class="nav navbar-nav">
             <li class="active" data-ng-controller="MyController as my" data-ng-hide="my.username == '???'"><a href="#currently-typing">Hi, {{my.username}}! <span>(That's your name here.)</span></a></li>
-            <li><a>Angular</a></li>
-            <li><a>Socket.IO</a></li>
-            <li><a>Express</a></li>
-            <li><a>Node.js</a></li>
-            <li><a>MongoDB</a></li>
           </ul>
         </div>
       </nav>
@@ -75,6 +70,10 @@
       </div>
 
     </main>
+
+    <footer>
+
+    </footer>
 
   </body>
 
