Try changing directive name to get auto scroll #fail

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <!-- <header class="jumbotron"> -->
       <!-- <h1>Float Messenger</h1>
-      <div data-ng-controller="MyController as my" data-ng-hide="my.username == '???'">
+      <div data-ng-controller="UserController as my" data-ng-hide="my.username == '???'">
         <h2>Hi, {{my.username}}! <span>(That's your name here.)</span></h2>
       </div> -->
       <nav class="navbar navbar-default">
@@ -30,7 +30,7 @@
             <a class="navbar-brand" href="#">Float Messenger</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active" data-ng-controller="MyController as my" data-ng-hide="my.username == '???'"><a href="#currently-typing">Hi, {{my.username}}! <span>(That's your name here.)</span></a></li>
+            <li class="active" data-ng-controller="UserController as my" data-ng-hide="my.username == '???'"><a href="#currently-typing">Hi, {{my.username}}! <span>(That's your name here.)</span></a></li>
           </ul>
         </div>
       </nav>
