--- a/public/index.html
+++ b/public/index.html
@@ -36,29 +36,29 @@
       </nav>
     <!-- </header> -->
 
-    <main data-ng-controller="ChannelController as channel" class="container">
+    <main class="container">
 
       <div class="row">
 
-        <div class="col-md-8 col-sm-10">
+        <div class="col-md-8 col-sm-10" data-ng-controller="ChannelController as channel">
 
-          <div data-ng-controller="MessengerController as messenger" id="messenger">
+          <div id="messenger"><!-- data-ng-controller="MessengerController as messenger" -->
 
             <ul id="#message-box" class="list-group-item" data-ng-scroll-bottom>
               <li data-chat-message data-ng-repeat="message in channel.messages" class="list-group-item"></li>
-              <li id="currently-typing" class="list-group-item">{{messenger.othersTypingStatus}}</li>
-            <!-- </ul> -->
+              <li id="currently-typing" class="list-group-item">{{channel.othersTypingStatus}}</li>
+            </ul>
 
-            <!-- <div> --><li class="list-group-item">
+            <div>
               <form id="messenger-form" novalidate>
-                <label for="message_body" title="That's you!"><strong>{{messenger.username}}</strong></label>
-                <input type="text" name="message_body" id="message_body" data-ng-model="messenger.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" data-ng-change="messenger.typing()">
-                <button data-ng-click="messenger.send(message)" id="#message-submit">send</button>
+                <label for="message_body" title="That's you!"><strong>{{channel.username}}</strong></label>
+                <input type="text" name="message_body" id="message_body" data-ng-model="channel.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" data-ng-change="channel.typing()">
+                <button data-ng-click="channel.send(message)" id="#message-submit">send</button>
               </form>
-            <!-- </div> --></li></ul>
-          </div>
+            </div>
+          </div><!-- end #messenger -->
 
-        </div>
+        </div><!-- end col -->
 
         <aside data-ng-controller="UserIndexController as list" id="user-index" class="col-md-4 col-sm-2 well well-sm">
           <h2>Current Users</h2>
