--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="socket.js"></script>
-    <!-- <script src="scrolline.js"></script> -->
     <script src="app.js"></script>
   </head>
 
@@ -44,18 +44,18 @@
 
           <div id="messenger"><!-- data-ng-controller="MessengerController as messenger" -->
 
-            <ul id="#message-box" class="list-group-item" data-ng-scroll-bottom>
-              <li data-chat-message data-ng-repeat="message in channel.messages" class="list-group-item"></li>
-              <li id="currently-typing" class="list-group-item">{{channel.othersTypingStatus}}</li>
-            </ul>
+            <div id="chats-box" scroll-bottom="channel.messages">
+              <ul id="chats">
+                <li data-chat-message data-ng-repeat="message in channel.messages" class="list-group-item"></li>
+                <li id="currently-typing" class="list-group-item">{{channel.othersTypingStatus}}</li>
+              </ul>
+            </div><!-- end chats-box -->
 
-            <div>
-              <form id="messenger-form" novalidate>
-                <label for="message_body" title="That's you!"><strong>{{channel.username}}</strong></label>
-                <input type="text" name="message_body" id="message_body" data-ng-model="channel.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" data-ng-change="channel.typing()">
-                <button data-ng-click="channel.getInput(message)" id="#message-submit">send</button>
-              </form>
-            </div>
+            <form id="messenger-form" novalidate>
+              <label for="message_body" title="That's you!"><strong>{{channel.username}}</strong></label>
+              <input type="text" name="message_body" id="message_body" data-ng-model="channel.message.body" autofocus autocomplete="off" placeholder="send the people a message from here" data-ng-change="channel.typing()">
+              <button data-ng-click="channel.getInput(message)" id="#message-submit">send</button>
+            </form>
           </div><!-- end #messenger -->
 
         </div><!-- end col -->
