Add main container for spacing

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 
   <body class="indigo lighten-1">
 
+    <div class="container">
+
     <nav>
       <div class="nav-wrapper indigo darken-4">
         <a href="#" class="brand-logo center">Float Messenger</a>
@@ -90,6 +92,8 @@
     <footer>
 
     </footer>
+
+    </div><!-- end container -->
 
   </body>
 
