Add connection status div filled with placeholder text

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,13 @@
 
       <div class="col m5 l4">
 
+        <div class="card red darken-4">
+          <div class="card-content white-text">
+            <span class="card-title">Connection Status</span>
+            <p>Let's figure out address the state of the connection here.</p>
+          </div>
+        </div>
+
         <div class="card green darken-2" data-ng-controller="UserController as my" data-ng-hide="my.username == '???'">
           <div class="card-content white-text">
             <span class="card-title">Hi, {{my.username}}!</span>
