Create factory for Primus, cache with Web Storage
Move the real-time Web Socket framework stuff (abstracted by Primus) into a reusable Angular factory, use Web Storage (via ngStorage) for storing messages and data received from the server locally.

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,9 @@
     <script src="app.js"></script>
 
     <script src="node_modules/angular-primus/angular-primus.js"></script>
+    <script src="node_modules/ngstorage/ngStorage.js"></script>
+
+    <script src="uplink.factory.js"></script>
 
     <!-- components -->
     <script src="home.view.js"></script>
