--- a/public/home.template.html
+++ b/public/home.template.html
@@ -7,8 +7,8 @@
 
     <div class="container">
         <ul class="list-group">
-            <li data-ng-repeat="message in $ctrl.messages" class="list-group-item" data-ng-class="{'disabled': !message.userId && message.userId !== 0}">
-                <span data-ng-if="message.userId != null" class="label" data-ng-class="message.userId === $ctrl.userId ? 'label-default' : 'label-primary'" title="userId: {{message.userId}}">{{$ctrl.userDirectory[message.userId]}}</span>
+            <li data-ng-repeat="message in $ctrl.$storage.channels[$ctrl.channel].messages" class="list-group-item" data-ng-class="{'disabled': !message.userId && message.userId !== 0}">
+                <span data-ng-if="message.userId != null" class="label" data-ng-class="message.userId === $ctrl.$storage.userId ? 'label-default' : 'label-primary'" title="userId: {{message.userId}}">{{$ctrl.$storage.userDirectory[message.userId]}}</span>
                 <span data-ng-class="{'small text-uppercase': message.userId == null}" title="{{message.subtext}}">{{message.body}}</span>
                 <small am-time-ago="message.postmark" class="pull-right"></small>
             </li>
@@ -21,13 +21,15 @@
                         <input type="text" data-ng-model="$ctrl.message" class="form-control" id="message-input" placeholder="type your message here" autocomplete="off" autofocus>
                     </div>
                     <div class="col-sm-2">
-                        <button type="submit" data-ng-click="$ctrl.write()" for="send-message-form" class="btn btn-primary form-control" data-ng-disabled="!$ctrl.isConnected || !$ctrl.message">
-                            {{$ctrl.isConnected ? 'send' : 'wait'}}
+                        <button type="submit" data-ng-click="$ctrl.send()" for="send-message-form" class="btn btn-primary form-control" data-ng-disabled="!$ctrl.$storage.isConnected || !$ctrl.message">
+                            {{$ctrl.$storage.isConnected ? 'send' : 'wait'}}
                         </button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+    
+    <!--$localStorage: <pre><code>{{$ctrl.$storage | json:2}}</code></pre>-->
 
 </div>
