Rename `home` view to `chat` view
Planning to use the chat view to show each channel/conversation for users.

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
     <script src="uplink.factory.js"></script>
 
     <!-- components -->
-    <script src="home.view.js"></script>
+    <script src="chat.view.js"></script>
     <!-- Client-side Primus library (use on dev only) -->
     <script src="/primus/primus.js"></script>
 </body>
